<resources>
    <string name="app_name">Campus Connect</string>


    <string name="user_id">tempacc4897@gmail.com</string>
    <string name="user_pass">12345678</string>
    <string name="user_id_placeholder">No User</string>

    <string name="login_preference">com.afreet.campusconnect_login_preference</string>
    <string name="login_status_preference">com.afreet.campusconnect_login_status_preference</string>
    <string name="login_userId_preference">com.afreet.campusconnect_login_userId_preference</string>
    <string name="title_activity_prof">ProfActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="studentUserType">student</string>
    <string name="facultyUserType">faculty</string>

    <string name="action_settings">Settings</string>
    <string name="fragment_account_management">Account Management</string>
    <string name="fragment_edit_categories">Edit Categories</string>
    <string name="fragment_sign_out">Sign Out</string>
    <string name="fragment_feedback">Feedback</string>
    <string name="fragment_how_to_use">How to use</string>
    <string name="fragment_user_post">User Posts</string>
    <string name="fragment_terms_and_condition">Terms and Conditions</string>
    <string name="fragment_about">About</string>
    <string name="fragment_name">fragment_name</string>
    <string name="feedbackOptionSelected">feedback</string>
    <string name="complaintOptionSelected">complaint</string>


</resources>
