<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_edit_category"
            android:icon="@drawable/ic_edit_categories"
            android:title="@string/fragment_edit_categories" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/fragment_feedback" />
        <item
            android:id="@+id/nav_tutorials"
            android:icon="@drawable/ic_tutorials"
            android:title="@string/fragment_how_to_use" />
        <item
            android:id="@+id/nav_terms_conditions"
            android:icon="@drawable/ic_terms_condition"
            android:title="@string/fragment_terms_and_condition" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/fragment_about" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_signout"
            android:title="@string/fragment_sign_out" />

    </group>


</menu>
